After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756544 - qtdemux: Fix taglist leak
qtdemux: Fix taglist leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Linux
: Normal normal
: 1.6.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-10-14 00:35 UTC by Vineeth
Modified: 2015-10-17 08:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix taglist leak (1.29 KB, patch)
2015-10-14 00:37 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-10-14 00:35:31 UTC
while parsing trak, in some cases instead of freeing the whole stream and it sub items, only the stream variable is being freed resulting in memory leak.

==32496== 88 (44 direct, 44 indirect) bytes in 1 blocks are definitely lost in loss record 3,669 of 3,913
==32496==    at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so)
==32496==    by 0x4259BE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==32496==    by 0x4270281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==32496==    by 0x4112F55: gst_tag_list_new_internal (gsttaglist.c:682)
==32496==    by 0x7163092: qtdemux_parse_tree (qtdemux.c:8485)
==32496==    by 0x7170C08: gst_qtdemux_loop_state_header (qtdemux.c:3855)
==32496==    by 0x7175040: gst_qtdemux_loop (qtdemux.c:5255)
==32496==    by 0x4118888: gst_task_func (gsttask.c:331)
==32496==    by 0x4119A2E: default_func (gsttaskpool.c:68)
==32496==    by 0x427B404: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==32496==    by 0x427A9A9: ??? (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0)
==32496==    by 0x431FF6F: start_thread (pthread_create.c:312)
==32496==    by 0x4421BED: clone (clone.S:129)
Comment 1 Vineeth 2015-10-14 00:37:17 UTC
Created attachment 313229 [details] [review]
fix taglist leak
Comment 2 Sebastian Dröge (slomo) 2015-10-14 07:22:36 UTC
Comment on attachment 313229 [details] [review]
fix taglist leak

commit 8283337e73557a38bf32bb8aac2542aa9eb38f0c
Author: Vineeth TM <vineeth.tm@samsung.com>
Date:   Wed Oct 14 09:29:50 2015 +0900

    qtdemux: Fix taglist memory leak
    
    Free the stream and its sub items instead of just the stream
    
    https://bugzilla.gnome.org/show_bug.cgi?id=756544